--- a/mysql-db/docker-compose.yml
+++ b/mysql-db/docker-compose.yml
@@ -3,14 +3,13 @@ services:
   mysql:
     image: mysql:latest
     container_name: mysql-container
-    restart: unless-stopped
     environment:
-      MYSQL_ROOT_PASSWORD: rootpassword   
-      MYSQL_DATABASE: mydatabase         
-      MYSQL_USER: myuser                 
-      MYSQL_PASSWORD: mypassword         
+      MYSQL_ROOT_PASSWORD: rootpassword
+      MYSQL_DATABASE: mydatabase
+      MYSQL_USER: myuser
+      MYSQL_PASSWORD: mypassword
     ports:
-      - "3306:3306"  
+      - "3306:3306"
     volumes:
-      - ./data:/var/lib/mysql  
-      - ./init-scripts:/docker-entrypoint-initdb.d  # Skrypty inicjalizujące
+      - ./my.cnf:/etc/mysql/my.cnf  # Montowanie pliku konfiguracji
+      - ./data:/var/lib/mysql       # Trwałe dane bazy danych
