--- a/oracle-db/docker-compose.yml
+++ b/oracle-db/docker-compose.yml
@@ -3,7 +3,7 @@ version: '3.8'
 services:
   oracle:
     image: oracleinanutshell/oracle-xe-11g
-    container_name: oracle-xe-container
+    container_name: oracle-container
     ports:
       - "1521:1521"
       - "8080:8080"
