--- a/mssql-db/docker-compose.yml
+++ b/mssql-db/docker-compose.yml
@@ -8,8 +8,8 @@ services:
       - "1433:1433"  # Mapowanie portu
     environment:
       ACCEPT_EULA: "Y"  # Akceptacja licencji
-      SA_PASSWORD: "StrongPassword123!"  # Hasło administratora (musi spełniać wymogi)
-      MSSQL_PID: "Express"  # Edycja SQL Server (Express, Developer, Standard itp.)
+      SA_PASSWORD: "StrongPassword123!"  # Hasło administratora
+      MSSQL_PID: "Express"  # Edycja SQL Server 
       MSSQL_DATABASE: "mydatabase"  # Automatyczne tworzenie bazy danych
     volumes:
       - mssql_data:/var/opt/mssql  # Dane bazy będą przechowywane lokalnie
